# investor_helper

./: .gitignore  Justfile  README.md  app.py  main.py  pyproject.toml  tailwind.config.js
misc_script/: get_mf_json.py
templates/: index.html  mutualfundsDetails.html  navbar.html  search-bar.html  search-results.html  search.html
